syntax = "proto3";

package graytorrent;

option go_package = "github.com/kylec725/graytorrent/rpc";

service Torrent {
  // Requests a list of all managed torrents
  rpc List (ListRequest) returns (stream TorrentInfo) {}

  // Adds another torrent to be managed
  rpc Add (AddRequest) returns (AddReply) {}

  // Removes a torrent from being managed
  rpc Remove (RemoveRequest) returns (RemoveReply) {}

  // Starts a torrent's download
  rpc Start (StartRequest) returns (StartReply) {}

  // Stops a torrent's download
  rpc Stop (StopRequest) returns (StopReply) {}
}

message ListRequest {
  string key = 1;
}

message TorrentInfo {
  string name = 1;
  bytes infoHash = 2;
  uint32 totalLength = 3;
  uint32 left = 4;
  enum State {
    STARTED = 0;
    STOPPED = 1;
    STALLED = 2;
    SEEDING = 3;
    COMPLETE = 4;
  }
  State state = 5;
}

message AddRequest {
}

message AddReply {
}

message RemoveRequest {
}

message RemoveReply {
}

message StartRequest {
}

message StartReply {
}

message StopRequest {
}

message StopReply {
}
